Fix title alignment

--- a/src/shared/components/modal.css
+++ b/src/shared/components/modal.css
@@ -67,8 +67,10 @@
 	}
 
 	.c-modal__header {
+		@mixin o-group;
 		@mixin o-text-box;
 
+		align-items: center;
 		flex: none;
 	}
 
